[gd_scene load_steps=7 format=3 uid="uid://bvetq7ixe7r7f"]

[ext_resource type="Script" path="res://enemy.gd" id="1_e5mpq"]
[ext_resource type="PackedScene" uid="uid://ccmarr0s1ecp8" path="res://LongRangeEnemyWeapon.tscn" id="2_x68tr"]
[ext_resource type="Texture2D" uid="uid://buiatnvn1ea3x" path="res://icon.svg" id="2_ysn0g"]
[ext_resource type="AudioStream" uid="uid://mrbk3x03kyre" path="res://esm_bubble_pop_shoot_v2_game_organic_cartoon.wav" id="4_w0i7d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k4rwi"]
radius = 59.0
height = 118.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bnmg"]
bg_color = Color(1, 0, 0, 1)

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_e5mpq")
weaponType = ExtResource("2_x68tr")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ysn0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_k4rwi")

[node name="invincibleDelay" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="prepareTime" type="Timer" parent="."]
one_shot = true

[node name="recoverTime" type="Timer" parent="."]
one_shot = true

[node name="maxRetreatTime" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
layout_direction = 2
offset_left = -22.0
offset_top = -50.0
offset_right = 22.0
offset_bottom = -40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_4bnmg")
step = 0.1
value = 100.0
show_percentage = false

[node name="hitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w0i7d")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="invincibleDelay" to="." method="_on_invincible_delay_timeout"]
[connection signal="timeout" from="prepareTime" to="." method="_on_prepare_time_timeout"]
[connection signal="timeout" from="recoverTime" to="." method="_on_recover_time_timeout"]
[connection signal="timeout" from="maxRetreatTime" to="." method="_on_max_retreat_time_timeout"]
